# gdrust-with-java

./: Cargo.toml  build.rs
.cargo/: config.toml
bindings/: nativelib.h  nativelib.lib  nativelib_dynamic.h
src/: bindings.rs  lib.rs  nativelib.rs  player.rs
