[package]
name = "gdrust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" } # for godot extension binding
wasm-bindgen = "0.2.87"

[build-dependencies]
bindgen = "0.68.1" # for creating the rust bindings of the dll headers

